--- a/pom.xml
+++ b/pom.xml
@@ -9,30 +9,38 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.donation</groupId>
+    <groupId>com.bdms</groupId>
     <artifactId>blood</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>blood</name>
+    <name>BDMS</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>11</java.version>
-        <mapstruts.version>1.4.2.Final</mapstruts.version>
+        <mapstruts.version>1.5.2.Final</mapstruts.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
         <dependency>
