--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bdms
+database.driverClassName  =org.postgresql.Driver
+spring.datasource.url     =jdbc:postgresql://localhost:5432/bdms
 spring.datasource.username=postgres
 spring.datasource.password=BDMS123!
-server.port=8020
+server.port               =8020
