--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url     =jdbc:postgresql://localhost:5432/bdms
 spring.datasource.username=postgres
 spring.datasource.password=BDMS123!
 server.port               =8020
+spring.jpa.show-sql=true
