add Creationg of JWT token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url     =jdbc:postgresql://localhost:5432/bdms
 spring.datasource.username=postgres
 spring.datasource.password=BDMS123!
 server.port               =8020
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+jwt.secret=BDMS123!S01
